Styled templates with logo

--- a/sponsors_project/templates/base.html
+++ b/sponsors_project/templates/base.html
@@ -44,6 +44,7 @@
 
 	<div class="container">	
 		<div class="sixteen columns">
+			<h1><a href="{% url sponsor_list %}"><img src="{{ STATIC_URL }}img/logo-magenta-150x64.png" /></a></h1>
 			{% block content%}
 			{% endblock %}
 		</div>
