--- a/sponsors_project/templates/base.html
+++ b/sponsors_project/templates/base.html
@@ -45,6 +45,9 @@
 	<div class="container">	
 		<div class="sixteen columns">
 			<h1><a href="{% url sponsor_list %}"><img src="{{ STATIC_URL }}img/logo-magenta-150x64.png" /></a></h1>
+			<p>
+			<a href="{% url sponsor_list %}">Sponsors</a> | <a href="#">Impact</a>
+			</p>
 			{% block content%}
 			{% endblock %}
 		</div>
