--- a/sponsors_project/templates/sponsors/sponsor_list.html
+++ b/sponsors_project/templates/sponsors/sponsor_list.html
@@ -5,7 +5,7 @@ All Sponsors
 {% endblock %}
 
 {% block content %}
-<h1>All Sponsors</h1>
+<h1>Sponsors</h1>
 
 {% if latest_sponsor_list %}
     <div class="twelve columns clearfix">
