--- a/sponsors_project/templates/base.html
+++ b/sponsors_project/templates/base.html
@@ -32,6 +32,7 @@
 	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
 	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
 	
+	{% block extra_head %}{% endblock %}
 </head>
 <body>
 
@@ -56,13 +57,14 @@
 		
 		
 		
-		
 	<!-- JS
 	================================================== -->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
 	<script>window.jQuery || document.write("<script src='{{ STATIC_URL }}js/jquery-1.5.1.min.js'>\x3C/script>")</script>
 	<script src="{{ STATIC_URL }}js/app.js"></script>
-	
+
+	{% block extra_js %}{% endblock %}
+
 <!-- End Document
 ================================================== -->
 </body>
