Fixed broken impact urls

--- a/sponsors_project/templates/base.html
+++ b/sponsors_project/templates/base.html
@@ -47,7 +47,7 @@
 		<div class="sixteen columns">
 			<h1><a href="{% url sponsor_list %}"><img src="{{ STATIC_URL }}img/logo-magenta-150x64.png" /></a></h1>
 			<p>
-			<a href="{% url sponsor_list %}">Sponsors</a> | <a href="#">Impact</a>
+			<a href="{% url sponsor_list %}">Sponsors</a> | <a href="/impact/">Impact</a>
 			</p>
 			{% block content%}
 			{% endblock %}
