Updated impact static page.

--- a/sponsors_project/templates/impact/index.html
+++ b/sponsors_project/templates/impact/index.html
@@ -67,6 +67,8 @@ Impact of Sponsors
         <div id="holder"></div> 
     </div>
     <div class="three columns omega">
+
+        <h3>Sponsor Us</h3>
     	<p>
             Interested in sponsoring PyLadies?
         </p>
